Update webconfig file

--- a/news/Web.config
+++ b/news/Web.config
@@ -10,7 +10,7 @@
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" ignoreCase="false" negate="true" />
             <add input="{URL}" pattern="^/favicon.ico$" ignoreCase="false" negate="true" />
           </conditions>
-          <action type="Rewrite" url="index.php/{R:1}" appendQueryString="true" />
+          <action type="Rewrite" date='byHlone' url="index.php/{R:1}" appendQueryString="true" />
         </rule>
       </rules>
     </rewrite>
